--- a/package.json
+++ b/package.json
@@ -5,11 +5,12 @@
   "scripts": {
     "start": "node server.mjs"
   },
-  "dependencies": {
-    "express": "^4.19.0",
-    "cors": "^2.8.5",
-    "puppeteer-core": "^23.0.0",
-    "@sparticuz/chromium-min": "^127.0.0"
-  }
+"dependencies": {
+  "express": "^4.19.0",
+  "cors": "^2.8.5",
+  "puppeteer-core": "^23.0.0",
+  "@sparticuz/chromium": "^127.0.0"
+}
+
 }
 
